# enve

./: .gitignore  .gitmodules  .travis.yml  .travis_linux_install.sh  .travis_linux_script.sh  .travis_linux_success.sh  .travis_osx_install.sh  .travis_osx_script.sh  .travis_osx_success.sh  16_04_deploy.sh  16_04_setup.sh  AniVect.pro  README.md  Source and building info.md  actionbutton.cpp  actionbutton.h  animationdockwidget.cpp  animationdockwidget.h  animationwidget.cpp  animationwidget.h  animationwidgetscrollbar.cpp  animationwidgetscrollbar.h  animatonwidgetscrollbar.cpp  animatonwidgetscrollbar.h  animator.cpp  animatordiagram.cpp  animatordiagram.h  animatorscollection.cpp  animatorscollection.h  animatorupdater.cpp  animatorupdater.h  application.cpp  application.h  avfileio.cpp  bone.cpp  bone.h  boundingbox.cpp  boundingbox.h  boundingboxlistitem.cpp  boxesgroup.cpp  (+181 more)
AddInclude/: SkStroke.h
Animators/: animator.cpp  animator.h  animatorscollection.cpp  animatorscollection.h  animatorupdater.cpp  animatorupdater.h  boolanimator.cpp  boolanimator.h  coloranimator.cpp  coloranimator.h  complexanimator.cpp  complexanimator.h  effectanimators.cpp  effectanimators.h  fakecomplexanimator.cpp  fakecomplexanimator.h  intanimator.cpp  intanimator.h  paintsettings.cpp  paintsettings.h  pathanimator.cpp  pathanimator.h  qpointfanimator.cpp  qpointfanimator.h  qrealanimator.cpp  qrealanimator.h  qrealvalueeffect.cpp  qrealvalueeffect.h  qstringanimator.cpp  qstringanimator.h  randomqrealgenerator.cpp  randomqrealgenerator.h  singlepathanimator.cpp  singlepathanimator.h  transformanimator.cpp  transformanimator.h  vectorsinglepathanimator.cpp  vectorsinglepathanimator.h
Bones/: bonepoint.cpp  bonepoint.h
Boxes/: animationbox.cpp  animationbox.h  bone.cpp  bone.h  boundingbox.cpp  boundingbox.h  boundingboxrendercontainer.cpp  boundingboxrendercontainer.h  boundingboxrenderdata.cpp  boundingboxrenderdata.h  boxesgroup.cpp  boxesgroup.h  boxpainthandler.cpp  boxpainthandler.h  circle.cpp  circle.h  draftcanvas.cpp  draftcanvas.h  imagebox.cpp  imagebox.h  imagesequencebox.cpp  imagesequencebox.h  linkbox.cpp  linkbox.h  paintbox.cpp  paintbox.h  particlebox.cpp  particlebox.h  pathbox.cpp  pathbox.h  rectangle.cpp  rectangle.h  rendercachehandler.cpp  rendercachehandler.h  renderdatahandler.cpp  renderdatahandler.h  textbox.cpp  textbox.h  vectorpath.cpp  vectorpath.h  (+2 more)
BoxesList/: boolpropertywidget.cpp  boolpropertywidget.h  boxesgroupwidgetcontainer.cpp  boxesgroupwidgetcontainer.h  boxeslistactionbutton.cpp  boxeslistactionbutton.h  boxeslistwidget.cpp  boxeslistwidget.h  boxitemwidget.cpp  boxitemwidget.h  boxitemwidgetcontainer.cpp  boxitemwidgetcontainer.h  boxscrollarea.cpp  boxscrollarea.h  boxscrollwidget.cpp  boxscrollwidget.h  boxscrollwidgetvisiblepart.cpp  boxscrollwidgetvisiblepart.h  boxsinglewidget.cpp  boxsinglewidget.h  boxtargetwidget.cpp  boxtargetwidget.h  coloranimatorbutton.cpp  coloranimatorbutton.h  complexanimatoritemwidget.cpp  complexanimatoritemwidget.h  complexanimatoritemwidgetcontainer.cpp  complexanimatoritemwidgetcontainer.h  effectanimatorsitemwidgetcontainer.cpp  effectanimatorsitemwidgetcontainer.h  qrealanimatoritemwidget.cpp  qrealanimatoritemwidget.h  widgetcontainer.cpp  widgetcontainer.h
Colors/: color.cpp  color.h  colorbutton.cpp  colorbutton.h  colorpickingwidget.cpp  colorpickingwidget.h  helpers.cpp  helpers.h  savedcolorbutton.cpp  savedcolorbutton.h  savedcolorswidget.cpp  savedcolorswidget.h  savedcolorwidgets.cpp  savedcolorwidgets.h
ExamplePathEffect/: ExamplePathEffect.pro  examplepatheffect.cpp  examplepatheffect.h  examplepatheffect_global.h
GUI/: actionbutton.cpp  actionbutton.h  animationwidgetscrollbar.cpp  boxeslistanimationdockwidget.cpp  boxeslistkeysviewwidget.cpp  boxeslistkeysviewwidget.h  canvaswidget.cpp  canvaswindow.cpp  canvaswindow.h  customfpsdialog.cpp  customfpsdialog.h  filesourcelist.h  fillstrokesettings.cpp  glwindow.cpp  graphboxeslist.cpp  keysview.cpp  keysview.h  mainwindow.cpp  mainwindow.h  newcanvasdialog.cpp  qdoubleslider.cpp  qdoubleslider.h  usagewidget.h  valueinput.cpp  verticalwidgetsstack.cpp  verticalwidgetsstack.h
Gradients/: currentgradientwidget.cpp  currentgradientwidget.h  displayedgradientswidget.cpp  displayedgradientswidget.h  gradientslistwidget.cpp  gradientslistwidget.h  singlegradientwidget.cpp  singlegradientwidget.h
ObjectSettings/: effectssettingswidget.cpp  effectssettingswidget.h  objectsettingswidget.cpp  objectsettingswidget.h  othersettingswidget.cpp  othersettingswidget.h  transformationsettingswidget.cpp  transformationsettingswidget.h
Paint/: animatedsurface.cpp  canvashandler.cpp  canvashandler.h  layer.cpp  layer.h  paintboxsettingsdialog.cpp  paintboxsettingsdialog.h  paintcanvas.cpp  paintcanvas.h  surface.h  tile.cpp  tilesdata.cpp  windowvariables.cpp  windowvariables.h
PathEffects/: displacepatheffect.cpp  displacepatheffect.h  duplicatepatheffect.cpp  grouplastpathsumpatheffect.cpp  grouplastpathsumpatheffect.h  lengthpatheffect.cpp  operationpatheffect.cpp  patheffect.cpp  patheffect.h  patheffectanimators.cpp  patheffectanimators.h  solidifypatheffect.cpp  solidifypatheffect.h
PixmapEffects/: blureffect.h  brightnesseffect.cpp  brightnesseffect.h  brusheffect.cpp  brusheffect.h  circleseffect.cpp  contrasteffect.cpp  contrasteffect.h  desaturateeffect.h  fmt_filters.cpp  fmt_filters.h  lineseffect.cpp  oileffect.h  pixmapeffect.cpp  pixmapeffect.h  replacecoloreffect.cpp  shadoweffect.h  swirleffect.h
Properties/: boolproperty.cpp  boolproperty.h  boxtargetproperty.cpp  boxtargetproperty.h  (+6 more)
src/app/brushes/: Makefile.am  Makefile.in  order.conf  readme.txt
src/app/brushes/Deevad/: readme.txt
src/app/brushes/Dieterle/: 8B_Pencil#1.myb  Blender.myb  Dissolver.myb  Eraser.myb  Fan#1.myb  Flat2#1.myb  Flight_Feathers.myb  Fount-offset#1.myb  Fountain_SF#1.myb  HalfTone#1.myb  HalfToneCMY#1.myb  Pencil-_Left_Handed.myb  Posterizer.myb  Round#1.myb  Splash.myb  Tail_Feathers.myb  Tail_Feathers2.myb  WateryFlatbrush.myb  arrow#1.myb
(+2818 files in other folders)
