brushesdir      = $(datadir)/mypaint-data/@MYPAINT_DATA_VERSION@/brushes/
classicdir      = $(datadir)/mypaint-data/@MYPAINT_DATA_VERSION@/brushes/classic/
deevaddir       = $(datadir)/mypaint-data/@MYPAINT_DATA_VERSION@/brushes/deevad/
experimentaldir = $(datadir)/mypaint-data/@MYPAINT_DATA_VERSION@/brushes/experimental/
kaerhondir      = $(datadir)/mypaint-data/@MYPAINT_DATA_VERSION@/brushes/kaerhon_v1/
ramondir        = $(datadir)/mypaint-data/@MYPAINT_DATA_VERSION@/brushes/ramon/
tandadir        = $(datadir)/mypaint-data/@MYPAINT_DATA_VERSION@/brushes/tanda/

brushes_DATA = order.conf

classic_DATA = \
	classic/blending_knife.myb	\
	classic/blending_knife_prev.png	\
	classic/blend+paint.myb	\
	classic/blend+paint_prev.png	\
	classic/blur.myb	\
	classic/blur_prev.png	\
	classic/brush.myb	\
	classic/brush_prev.png	\
	classic/bulk.myb	\
	classic/bulk_prev.png	\
	classic/calligraphy.myb	\
	classic/calligraphy_prev.png	\
	classic/charcoal.myb	\
	classic/charcoal_prev.png	\
	classic/coarse_bulk_1.myb	\
	classic/coarse_bulk_1_prev.png	\
	classic/coarse_bulk_2.myb	\
	classic/coarse_bulk_2_prev.png	\
	classic/coarse_bulk_3.myb	\
	classic/coarse_bulk_3_prev.png	\
	classic/dry_brush.myb	\
	classic/dry_brush_prev.png	\
	classic/imp_blending.myb	\
	classic/imp_blending_prev.png	\
	classic/imp_details.myb	\
	classic/imp_details_prev.png	\
	classic/impressionism.myb	\
	classic/impressionism_prev.png	\
	classic/ink_blot.myb	\
	classic/ink_blot_prev.png	\
	classic/ink_eraser.myb	\
	classic/ink_eraser_prev.png	\
	classic/kabura.myb	\
	classic/kabura_prev.png	\
	classic/knife.myb	\
	classic/knife_prev.png	\
	classic/long_grass.myb	\
	classic/long_grass_prev.png	\
	classic/marker_fat.myb	\
	classic/marker_fat_prev.png	\
	classic/marker_small.myb	\
	classic/marker_small_prev.png	\
	classic/modelling2.myb	\
	classic/modelling2_prev.png	\
	classic/modelling.myb	\
	classic/modelling_prev.png	\
	classic/pencil.myb	\
	classic/pencil_prev.png	\
	classic/pen.myb	\
	classic/pen_prev.png	\
	classic/pointy_ink.myb	\
	classic/pointy_ink_prev.png	\
	classic/puantilism2.myb	\
	classic/puantilism2_prev.png	\
	classic/puantilism.myb	\
	classic/puantilism_prev.png	\
	classic/rounded.myb	\
	classic/rounded_prev.png	\
	classic/short_grass.myb	\
	classic/short_grass_prev.png	\
	classic/slow_ink.myb	\
	classic/slow_ink_prev.png	\
	classic/smudge.myb	\
	classic/smudge+paint.myb	\
	classic/smudge+paint_prev.png	\
	classic/smudge_prev.png	\
	classic/textured_ink.myb	\
	classic/textured_ink_prev.png	\
	classic/wet_knife.myb	\
	classic/wet_knife_prev.png

deevad_DATA = \
	deevad/2B_pencil.myb	\
	deevad/2B_pencil_prev.png	\
	deevad/4H_pencil.myb	\
	deevad/4H_pencil_prev.png	\
	deevad/airbrush.myb	\
	deevad/airbrush_prev.png	\
	deevad/ballpen.myb	\
	deevad/ballpen_prev.png	\
	deevad/basic_digital_brush.myb	\
	deevad/basic_digital_brush_prev.png	\
	deevad/basic_digital_brush_smudging.myb	\
	deevad/basic_digital_brush_smudging_prev.png	\
	deevad/basic_digital_knife.myb	\
	deevad/basic_digital_knife_prev.png	\
	deevad/basic_digital_knife_smudging.myb	\
	deevad/basic_digital_knife_smudging_prev.png	\
	deevad/blending.myb	\
	deevad/blending_prev.png	\
	deevad/brush.myb	\
	deevad/brush_prev.png	\
	deevad/chalk.myb	\
	deevad/chalk_prev.png	\
	deevad/detail_brush_large_glazing.myb	\
	deevad/detail_brush_large_glazing_prev.png	\
	deevad/detail_brush_large.myb	\
	deevad/detail_brush_large_prev.png	\
	deevad/detail_brush_thin_glazing.myb	\
	deevad/detail_brush_thin_glazing_prev.png	\
	deevad/detail_brush_thin.myb	\
	deevad/detail_brush_thin_prev.png	\
	deevad/fill.myb	\
	deevad/fill_prev.png	\
	deevad/grainy_blending.myb	\
	deevad/grainy_blending_prev.png	\
	deevad/kneaded_eraser_large.myb	\
	deevad/kneaded_eraser_large_prev.png	\
	deevad/kneaded_eraser.myb	\
	deevad/kneaded_eraser_prev.png	\
	deevad/large_hard_eraser.myb	\
	deevad/large_hard_eraser_prev.png	\
	deevad/large_watercolor_fringe.myb	\
	deevad/large_watercolor_fringe_prev.png	\
	deevad/liner.myb	\
	deevad/liner_prev.png	\
	deevad/only_water_fringe.myb	\
	deevad/only_water_fringe_prev.png	\
	deevad/pen.myb	\
	deevad/pen-note.myb	\
	deevad/pen-note_prev.png	\
	deevad/pen_prev.png	\
	deevad/readme.txt	\
	deevad/rigger_brush.myb	\
	deevad/rigger_brush_prev.png	\
	deevad/rigger_brush_thin.myb	\
	deevad/rigger_brush_thin_prev.png	\
	deevad/rough.myb	\
	deevad/rough_prev.png	\
	deevad/soft-dip-pen.myb	\
	deevad/soft-dip-pen_prev.png	\
	deevad/sponge_smudging.myb	\
	deevad/sponge_smudging_prev.png	\
	deevad/spray2.myb	\
	deevad/spray2_prev.png	\
	deevad/spray.myb	\
	deevad/spray_prev.png	\
	deevad/thin_hard_eraser.myb	\
	deevad/thin_hard_eraser_prev.png	\
	deevad/thin_watercolor.myb	\
	deevad/thin_watercolor_prev.png	\
	deevad/watercolor_expressive.myb	\
	deevad/watercolor_expressive_prev.png	\
	deevad/watercolor_glazing.myb	\
	deevad/watercolor_glazing_prev.png

experimental_DATA = \
	experimental/1pixel.myb	\
	experimental/1pixel_prev.png	\
	experimental/basic.myb	\
	experimental/basic_prev.png	\
	experimental/bubble.myb	\
	experimental/bubble_prev.png	\
	experimental/DNA_brush.myb	\
	experimental/DNA_brush_prev.png	\
	experimental/fur.myb	\
	experimental/fur_prev.png	\
	experimental/glow.myb	\
	experimental/glow_prev.png	\
	experimental/hard_blot.myb	\
	experimental/hard_blot_prev.png	\
	experimental/hard_sting.myb	\
	experimental/hard_sting_prev.png	\
	experimental/irregular_ink.myb	\
	experimental/irregular_ink_prev.png	\
	experimental/leaves.myb	\
	experimental/leaves_prev.png	\
	experimental/particules_3.myb	\
	experimental/particules_3_prev.png	\
	experimental/particules_eraser.myb	\
	experimental/particules_eraser_prev.png	\
	experimental/pick_and_drag.myb	\
	experimental/pick_and_drag_prev.png	\
	experimental/pixelblocking.myb	\
	experimental/pixelblocking_prev.png	\
	experimental/pixel_hardink.myb	\
	experimental/pixel_hardink_prev.png	\
	experimental/sewing.myb	\
	experimental/sewing_prev.png	\
	experimental/small_blot.myb	\
	experimental/small_blot_prev.png	\
	experimental/soft_irregular.myb	\
	experimental/soft_irregular_prev.png	\
	experimental/soft.myb	\
	experimental/soft_prev.png	\
	experimental/spaced-blot.myb	\
	experimental/spaced-blot_prev.png	\
	experimental/speed_blot.myb	\
	experimental/speed_blot_prev.png	\
	experimental/subtle_pencil.myb	\
	experimental/subtle_pencil_prev.png	\
	experimental/track.myb	\
	experimental/track_prev.png

kaerhon_DATA = \
	kaerhon_v1/airbruch_press_a.myb	\
	kaerhon_v1/airbruch_press_a_prev.png	\
	kaerhon_v1/Airbrush_a.myb	\
	kaerhon_v1/Airbrush_a_prev.png	\
	kaerhon_v1/airsmudge_a.myb	\
	kaerhon_v1/airsmudge_a_prev.png	\
	kaerhon_v1/airsmudgeultimate_sk.myb	\
	kaerhon_v1/airsmudgeultimate_sk_prev.png	\
	kaerhon_v1/classicroundblock_static_c.myb	\
	kaerhon_v1/classicroundblock_static_c_prev.png	\
	kaerhon_v1/classic_sk.myb	\
	kaerhon_v1/classic_sk_prev.png	\
	kaerhon_v1/Dirty_Transparent_sk.myb	\
	kaerhon_v1/Dirty_Transparent_sk_prev.png	\
	kaerhon_v1/extreme_round_l.myb	\
	kaerhon_v1/extreme_round_l_prev.png	\
	kaerhon_v1/fill_c.myb	\
	kaerhon_v1/fill_c_prev.png	\
	kaerhon_v1/flat_bar_l.myb	\
	kaerhon_v1/flat_bar_l_prev.png	\
	kaerhon_v1/ink-slowline_s.myb	\
	kaerhon_v1/ink-slowline_s_prev.png	\
	kaerhon_v1/ink_slow_s.myb	\
	kaerhon_v1/ink_slow_s_prev.png	\
	kaerhon_v1/inkster_l.myb	\
	kaerhon_v1/inkster_l_prev.png	\
	kaerhon_v1/paint_barrr_sm.myb	\
	kaerhon_v1/paint_barrr_sm_prev.png	\
	kaerhon_v1/paint_radius_2_sm.myb	\
	kaerhon_v1/paint_radius_2_sm_prev.png	\
	kaerhon_v1/paint_sm.myb	\
	kaerhon_v1/paint_sm_prev.png	\
	kaerhon_v1/ReadMe.txt	\
	kaerhon_v1/Sketcher2_sk.myb	\
	kaerhon_v1/Sketcher2_sk_prev.png	\
	kaerhon_v1/Smear_sm.myb	\
	kaerhon_v1/Smear_sm_prev.png	\
	kaerhon_v1/smudge_ink(0.7)_sm.myb	\
	kaerhon_v1/smudge_ink(0.7)_sm_prev.png	\
	kaerhon_v1/wet_paint_sm.myb	\
	kaerhon_v1/wet_paint_sm_prev.png

ramon_DATA = \
	ramon/100%_Opaque.myb	\
	ramon/100%_Opaque_prev.png	\
	ramon/2B_pencil.myb	\
	ramon/2B_pencil_prev.png	\
	ramon/Beamlight.myb	\
	ramon/Beamlight_prev.png	\
	ramon/BigAirbrush.myb	\
	ramon/BigAirbrush_prev.png	\
	ramon/Blur_Fast.myb	\
	ramon/Blur_Fast_prev.png	\
	ramon/B-pencil.myb	\
	ramon/B-pencil_prev.png	\
	ramon/Classic_Paint.myb	\
	ramon/Classic_Paint_prev.png	\
	ramon/Clouds.myb	\
	ramon/Clouds_prev.png	\
	ramon/Delayed_.myb	\
	ramon/Delayed__prev.png	\
	ramon/Dirty_Noise.myb	\
	ramon/Dirty_Noise_prev.png	\
	ramon/Glow_Airbrush.myb	\
	ramon/Glow_Airbrush_prev.png	\
	ramon/Grain.myb	\
	ramon/Grain_prev.png	\
	ramon/Hard_Eraser.myb	\
	ramon/Hard_Eraser_prev.png	\
	ramon/Knife.myb	\
	ramon/Knife_prev.png	\
	ramon/Marker.myb	\
	ramon/Marker_prev.png	\
	ramon/Pastel_1.myb	\
	ramon/Pastel_1_prev.png	\
	ramon/PenBrush.myb	\
	ramon/PenBrush_prev.png	\
	ramon/Pen.myb	\
	ramon/Pen_prev.png	\
	ramon/P._Shade.myb	\
	ramon/P._Shade_prev.png	\
	ramon/Round_Bl.myb	\
	ramon/Round_Bl_prev.png	\
	ramon/Round.myb	\
	ramon/Round_prev.png	\
	ramon/RS_blendOP.myb	\
	ramon/RS_blendOP_prev.png	\
	ramon/Sketch_1.myb	\
	ramon/Sketch_1_prev.png	\
	ramon/Smear.myb	\
	ramon/Smear_prev.png	\
	ramon/Soft_Eraser.myb	\
	ramon/Soft_Eraser_prev.png	\
	ramon/Thin_Pen.myb	\
	ramon/Thin_Pen_prev.png	\
	ramon/Wet_Direction.myb	\
	ramon/Wet_Direction_prev.png	\
	ramon/wet_round.myb	\
	ramon/wet_round_prev.png

tanda_DATA = \
	tanda/acrylic-03-only-water.myb	\
	tanda/acrylic-03-only-water_prev.png	\
	tanda/acrylic-03-paint.myb	\
	tanda/acrylic-03-paint_prev.png	\
	tanda/acrylic-03-with-water.myb	\
	tanda/acrylic-03-with-water_prev.png	\
	tanda/acrylic-04-only-water.myb	\
	tanda/acrylic-04-only-water_prev.png	\
	tanda/acrylic-04-paint.myb	\
	tanda/acrylic-04-paint_prev.png	\
	tanda/acrylic-04-with-water.myb	\
	tanda/acrylic-04-with-water_prev.png	\
	tanda/acrylic-05-only-water.myb	\
	tanda/acrylic-05-only-water_prev.png	\
	tanda/acrylic-05-paint.myb	\
	tanda/acrylic-05-paint_prev.png	\
	tanda/acrylic-05-with-water.myb	\
	tanda/acrylic-05-with-water_prev.png	\
	tanda/charcoal-01.myb	\
	tanda/charcoal-01_prev.png	\
	tanda/charcoal-03.myb	\
	tanda/charcoal-03_prev.png	\
	tanda/charcoal-04.myb	\
	tanda/charcoal-04_prev.png	\
	tanda/charcoal-blur1.myb	\
	tanda/charcoal-blur1_prev.png	\
	tanda/marker-01.myb	\
	tanda/marker-01_prev.png	\
	tanda/marker-05.myb	\
	tanda/marker-05_prev.png	\
	tanda/oil-01-clean.myb	\
	tanda/oil-01-clean_prev.png	\
	tanda/oil-01-paint.myb	\
	tanda/oil-01-paint_prev.png	\
	tanda/oil-03-clean.myb	\
	tanda/oil-03-clean_prev.png	\
	tanda/oil-03-paint.myb	\
	tanda/oil-03-paint_prev.png	\
	tanda/oil-06-clean.myb	\
	tanda/oil-06-clean_prev.png	\
	tanda/oil-06-paint.myb	\
	tanda/oil-06-paint_prev.png	\
	tanda/oil-mop.myb	\
	tanda/oil-mop_prev.png	\
	tanda/pencil-2b.myb	\
	tanda/pencil-2b_prev.png	\
	tanda/pencil-8b.myb	\
	tanda/pencil-8b_prev.png	\
	tanda/splatter-02.myb	\
	tanda/splatter-02_prev.png	\
	tanda/splatter-04.myb	\
	tanda/splatter-04_prev.png	\
	tanda/texture-03.myb	\
	tanda/texture-03_prev.png	\
	tanda/texture-06.myb	\
	tanda/texture-06_prev.png	\
	tanda/texture-12.myb	\
	tanda/texture-12_prev.png	\
	tanda/water-01.myb	\
	tanda/water-01_prev.png	\
	tanda/water-02.myb	\
	tanda/water-02_prev.png	\
	tanda/water-05.myb	\
	tanda/water-05_prev.png	\
	tanda/water-06.myb	\
	tanda/water-06_prev.png	\
	tanda/watercolor-02-paint.myb	\
	tanda/watercolor-02-paint_prev.png	\
	tanda/watercolor-02-water.myb	\
	tanda/watercolor-02-water_prev.png
